syntax = "proto3";

package ON.Fragments.Content;

import "google/protobuf/timestamp.proto";

// Content record data
message AssetRecord {
  message PublicData {
    string AssetID = 1;                 // Guid for the content record
    google.protobuf.Timestamp CreatedOnUTC = 2; // UTC timestamp when content was created
    google.protobuf.Timestamp ModifiedOnUTC = 3;  // UTC timestamp when content record was last modified
    google.protobuf.Timestamp PublishedOnUTC = 4;  // UTC timestamp when content was published
    string Title = 5;
    string Caption = 6;
    string URL = 7;
    string MimeType = 8;
    AssetType AssetType = 9;
    bytes Data = 10;
  }
  message PrivateData {
  }

  PublicData Public = 1;
  PrivateData Private = 2;

  enum AssetType {
    Image = 0;
  }
}